@@ -1,6 +1,6 @@
 ##########################################################################
 #  
-#  Copyright (c) 2011, John Haddon. All rights reserved.
+#  Copyright (c) 2011-2012, John Haddon. All rights reserved.
 #  Copyright (c) 2011-2012, Image Engine Design Inc. All rights reserved.
 #  
 #  Redistribution and use in source and binary forms, with or without
@@ -37,7 +37,6 @@
 
 import inspect
 import weakref
-import types
 
 import IECore
 
@@ -53,7 +52,7 @@ class Menu( GafferUI.Widget ) :
 	
 		GafferUI.Widget.__init__( self, _qtMenu if _qtMenu else QtGui.QMenu(), **kw )
 			
-		self._qtWidget().aboutToShow.connect( IECore.curry( self.__show, self._qtWidget(), definition ) )
+		self._qtWidget().aboutToShow.connect( IECore.curry( Gaffer.WeakMethod( self.__show ), self._qtWidget(), definition ) )
 		
 		self._setStyleSheet()
 		
@@ -97,13 +96,8 @@ class Menu( GafferUI.Widget ) :
 	
 		args = []
 		kw = {}
-		
-		commandArgs = []
-		if isinstance( command, types.FunctionType ) :
-			commandArgs = inspect.getargspec( command )[0]
-		elif isinstance( command, Gaffer.WeakMethod ) :
-			commandArgs = inspect.getargspec( command.method() )[0][1:]
-	
+		commandArgs = inspect.getargspec( command )[0]
+
 		if "menu" in commandArgs :
 			kw["menu"] = self
 		
@@ -142,7 +136,7 @@ class Menu( GafferUI.Widget ) :
 										
 					subMenu = qtMenu.addMenu( name )
 					subMenuDefinition = definition.reRooted( "/" + name + "/" )					
-					subMenu.aboutToShow.connect( IECore.curry( self.__show, subMenu, subMenuDefinition ) )
+					subMenu.aboutToShow.connect( IECore.curry( Gaffer.WeakMethod( self.__show ), subMenu, subMenuDefinition ) )
 					
 				else :
 				
@@ -153,7 +147,7 @@ class Menu( GafferUI.Widget ) :
 					if item.subMenu is not None :
 										
 						subMenu = qtMenu.addMenu( label )
-						subMenu.aboutToShow.connect( IECore.curry( self.__show, subMenu, item.subMenu ) )
+						subMenu.aboutToShow.connect( IECore.curry( Gaffer.WeakMethod( self.__show ), subMenu, item.subMenu ) )
 					
 					else :
 				
@@ -181,8 +175,7 @@ class Menu( GafferUI.Widget ) :
 							else :
 								signal = qtAction.triggered[bool]
 
-							## \todo Check we're not making unbreakable circular references here
-							signal.connect( IECore.curry( self.__commandWrapper, qtAction, item.command ) )
+							signal.connect( IECore.curry( Gaffer.WeakMethod( self.__commandWrapper ), qtAction, item.command ) )
 
 						active = item.active
 						if callable( active ) :
